# craftsperson-env

./: .gitignore  LICENSE  README.md  craftsperson_env.py  pyproject.toml  requirements.txt  setup.py  xtey2env.py
craftsperson_env/: __init__.py  __main__.py  main.py
craftsperson_env/utils/: __init__.py  assert_controller.py  base_config.py  contraster.py  convert_naming_case_type.py  load_config_file.py  load_files.py  path_modifier.py  pather.py
examples/: dev.env  dev.json  dev.toml  dev.xml  dev.yaml  env_config_file.env  examples.ipynb  json_config_file.json  new_munch.ipynb  test.ipynb  toml_config_file.toml  xml_config_file.xml  yaml_config_file.yaml
utils/: contraster.py
