[tool.poetry]
name = "craftsperson-env"
version = "1.0.5"
description = "A configuration file parser for yaml, env, toml, xml, and json formats"
authors = ["Celal Akçelik <celalakcelikk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
