[tool.poetry]
name = "craftsperson-env"
version = "1.0.6"
description = "A configuration file parser for yaml, env, toml, xml, and json formats"
authors = ["Celal Akçelik <celalakcelikk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
stringcase = ">=1.0.0"
python-dotenv = ">=1.0.0"
PyYAML = ">=6.0.1"
toml = ">=0.10.2"
validators = ">=0.22.0"
xmltodict = ">=0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
